import { describe, expect, test } from "bun:test";
import type {
	ModelSummary,
	PendingRequestPayload,
	PermissionRequestData,
	RespondToRequestParams,
	SessionHistoryCompactionResult,
	SessionMode,
	Settings,
	SessionEventPayload,
	InstructionSource,
} from "../rpc";
import type { AppErrorPayload } from "../app/errors";

// Wire-shape snapshots — equivalent to the old `insta` snapshots in
// `src-tauri/tests/ipc_contract.rs`. The whole point is that if anyone
// renames a field, this test breaks loudly. Keep these in sync with the
// types in `../rpc.ts`.

describe("IPC wire contracts", () => {
	test("Settings shape", () => {
		const sample: Settings = {
			version: 7,
			appearance: { theme: "dark", reasoningVisibility: "compact", streaming: false },
			layout: { dockview: null },
			workspaces: {
				recent: ["D:\\repo\\dafman", "C:\\code\\demo"],
				defaultWorkspace: "D:\\repo\\dafman",
			},
			notifications: { turnEnd: false, waitingForInput: true },
		};
		expect(sample).toMatchSnapshot();
	});

	test("Settings with persisted layout", () => {
		const sample: Settings = {
			version: 7,
			appearance: { theme: "dark", reasoningVisibility: "compact", streaming: true },
			layout: {
				dockview: {
					grid: {
						root: {},
						height: 600,
						width: 800,
						orientation: "HORIZONTAL",
					},
					panels: { "sess-1": { id: "sess-1", contentComponent: "chat" } },
					activeGroup: "g1",
				},
			},
			workspaces: { recent: [], defaultWorkspace: "" },
			notifications: { turnEnd: true, waitingForInput: true },
		};
		expect(sample).toMatchSnapshot();
	});

	test("ModelSummary shape", () => {
		const sample: ModelSummary = {
			id: "claude-sonnet-4.5",
			name: "Claude Sonnet 4.5",
			supportsReasoningEffort: true,
			supportedReasoningEfforts: ["low", "medium", "high"],
			defaultReasoningEffort: "medium",
		};
		expect(sample).toMatchSnapshot();
	});

	test("SessionEventPayload shape", () => {
		const sample: SessionEventPayload = {
			sessionId: "sess-1",
			eventType: "assistant.message_delta",
			data: { deltaContent: "hi" },
		};
		expect(sample).toMatchSnapshot();
	});

	test("SessionEventPayload with envelope metadata (tool event)", () => {
		const sample: SessionEventPayload = {
			sessionId: "sess-1",
			eventType: "tool.execution_complete",
			data: {
				toolCallId: "call-abc",
				success: true,
				result: { content: "ok", detailedContent: "ok\n" },
			},
			agentId: "sub-agent-7",
			eventId: "00000000-0000-0000-0000-000000000001",
			timestamp: "2026-05-17T15:00:00.000Z",
		};
		expect(sample).toMatchSnapshot();
	});

	test("SessionMetadataSummary shape", () => {
		const sample: import("../rpc").SessionMetadataSummary = {
			sessionId: "s-1",
			startTime: "2026-05-17T10:00:00.000Z",
			modifiedTime: "2026-05-17T11:30:00.000Z",
			summary: "refactor auth",
			isRemote: false,
			cwd: "/repo",
			repository: "AsafMah/dafman",
			branch: "main",
		};
		expect(sample).toMatchSnapshot();
	});

	test("AppErrorPayload variants", () => {
		const variants: AppErrorPayload[] = [
			{ kind: "ClientNotStarted" },
			{ kind: "SessionNotFound", data: "sess-42" },
			{ kind: "Settings", data: "disk full" },
			{ kind: "Sdk", data: "rpc closed" },
		];
		expect(variants).toMatchSnapshot();
	});

	test("SessionMode union", () => {
		const variants: SessionMode[] = ["interactive", "plan", "autopilot"];
		expect(variants).toMatchSnapshot();
	});

	test("sendMessage request — default mode (omitted)", () => {
		const sample = { sessionId: "sess-1", text: "hello" };
		expect(sample).toMatchSnapshot();
	});

	test("sendMessage request — explicit enqueue mode", () => {
		const sample = {
			sessionId: "sess-1",
			text: "queue this",
			mode: "enqueue" as const,
		};
		expect(sample).toMatchSnapshot();
	});

	test("sendMessage request — explicit immediate mode", () => {
		const sample = {
			sessionId: "sess-1",
			text: "steer this",
			mode: "immediate" as const,
		};
		expect(sample).toMatchSnapshot();
	});

	test("abortSession request shape", () => {
		const sample = { sessionId: "sess-1" };
		expect(sample).toMatchSnapshot();
	});

	test("SessionHistoryCompactionResult shape", () => {
		const sample: SessionHistoryCompactionResult = {
			success: true,
			tokensFreed: 1234,
			messagesRemoved: 5,
		};
		expect(sample).toMatchSnapshot();
	});

	test("setSessionWorkingDirectory request shape", () => {
		const sample = {
			sessionId: "sess-1",
			workingDirectory: "..\\other",
			baseWorkingDirectory: "C:\\repo\\dafman",
		};
		expect(sample).toMatchSnapshot();
	});

	test("PendingRequestPayload — permission", () => {
		const permission: PermissionRequestData = {
			kind: "shell",
			toolCallId: "tc-abc",
			summary: "shell: rm -rf /tmp/x",
			raw: { command: "rm -rf /tmp/x", cwd: "/home/user" },
		};
		const sample: PendingRequestPayload = {
			sessionId: "sess-1",
			requestId: "req-uuid-1",
			kind: "permission",
			request: permission,
		};
		expect(sample).toMatchSnapshot();
	});

	test("PendingRequestPayload — userInput", () => {
		const sample: PendingRequestPayload = {
			sessionId: "sess-1",
			requestId: "req-uuid-2",
			kind: "userInput",
			request: {
				question: "What is your name?",
				choices: ["Alice", "Bob"],
				allowFreeform: true,
			},
		};
		expect(sample).toMatchSnapshot();
	});

	test("PendingRequestPayload — elicitation url", () => {
		const sample: PendingRequestPayload = {
			sessionId: "sess-1",
			requestId: "req-uuid-3",
			kind: "elicitation",
			request: {
				message: "Authenticate to GitHub",
				mode: "url",
				elicitationSource: "mcp/github",
				url: "https://github.com/login/oauth/authorize",
			},
		};
		expect(sample).toMatchSnapshot();
	});

	test("PendingRequestPayload — exit plan mode", () => {
		const sample: PendingRequestPayload = {
			sessionId: "sess-1",
			requestId: "req-uuid-4",
			kind: "exitPlanMode",
			request: {
				summary: "- Implement the plan",
				planContent: "# Plan: Do the thing.",
				actions: ["interactive", "autopilot", "exit_only", "autopilot_fleet"],
				recommendedAction: "interactive",
			},
		};
		expect(sample).toMatchSnapshot();
	});

	test("PendingRequestPayload — auto mode switch", () => {
		const sample: PendingRequestPayload = {
			sessionId: "sess-1",
			requestId: "req-uuid-5",
			kind: "autoModeSwitch",
			request: { errorCode: "rate_limit", retryAfterSeconds: 60 },
		};
		expect(sample).toMatchSnapshot();
	});

	test("RespondToRequestParams — permission approve once", () => {
		const sample: RespondToRequestParams = {
			sessionId: "sess-1",
			requestId: "req-uuid-1",
			response: { kind: "permission", decision: "approveOnce" },
		};
		expect(sample).toMatchSnapshot();
	});

	test("RespondToRequestParams — permission approve for session (commands rule)", () => {
		const sample: RespondToRequestParams = {
			sessionId: "sess-1",
			requestId: "req-uuid-1c",
			response: {
				kind: "permission",
				decision: "approveForSession",
				approval: { kind: "commands", commandIdentifiers: ["git"] },
			},
		};
		expect(sample).toMatchSnapshot();
	});

	test("RespondToRequestParams — permission approve for session (mcp tool)", () => {
		const sample: RespondToRequestParams = {
			sessionId: "sess-1",
			requestId: "req-uuid-1m",
			response: {
				kind: "permission",
				decision: "approveForSession",
				approval: { kind: "mcp", serverName: "github", toolName: "list_issues" },
			},
		};
		expect(sample).toMatchSnapshot();
	});

	test("RespondToRequestParams — permission approve for session (url domain)", () => {
		const sample: RespondToRequestParams = {
			sessionId: "sess-1",
			requestId: "req-uuid-1u",
			response: {
				kind: "permission",
				decision: "approveForSession",
				domain: "github.com",
			},
		};
		expect(sample).toMatchSnapshot();
	});

	test("RespondToRequestParams — userInput freeform", () => {
		const sample: RespondToRequestParams = {
			sessionId: "sess-1",
			requestId: "req-uuid-2",
			response: { kind: "userInput", answer: "Alice", wasFreeform: false },
		};
		expect(sample).toMatchSnapshot();
	});

	test("RespondToRequestParams — elicitation accept", () => {
		const sample: RespondToRequestParams = {
			sessionId: "sess-1",
			requestId: "req-uuid-3",
			response: { kind: "elicitation", action: "accept" },
		};
		expect(sample).toMatchSnapshot();
	});

	test("RespondToRequestParams — exit plan mode autopilot fleet", () => {
		const sample: RespondToRequestParams = {
			sessionId: "sess-1",
			requestId: "req-uuid-4",
			response: {
				kind: "exitPlanMode",
				approved: true,
				selectedAction: "autopilot_fleet",
			},
		};
		expect(sample).toMatchSnapshot();
	});

	test("RespondToRequestParams — auto mode switch yes always", () => {
		const sample: RespondToRequestParams = {
			sessionId: "sess-1",
			requestId: "req-uuid-5",
			response: { kind: "autoModeSwitch", response: "yes_always" },
		};
		expect(sample).toMatchSnapshot();
	});
});

describe("IPC wire contracts — diagnostics", () => {
	test("LogRecord shape (info + warn + error variants)", () => {
		const samples: import("../rpc").LogRecord[] = [
			{ ts: "2026-05-21T20:00:00.000Z", level: "info", message: "session resumed", sessionId: "sess-1" },
			{ ts: "2026-05-21T20:00:01.123Z", level: "warn", message: "ratelimited", retryMs: 1200 },
			{ ts: "2026-05-21T20:00:02.456Z", level: "error", message: "boot failed", error: "spawn ENOENT" },
		];
		expect(samples).toMatchSnapshot();
	});

	test("getLogState response shape", () => {
		const sample = {
			level: "info" as import("../rpc").LogLevel,
			recent: [
				{ ts: "2026-05-21T20:00:00.000Z", level: "info" as import("../rpc").LogLevel, message: "ready" },
			],
		};
		expect(sample).toMatchSnapshot();
	});

	test("exportDiagnostics result shape", () => {
		const sample = {
			path: "C:/Users/mahle/AppData/Local/Dafman/dafman-diagnostics-2026-05-21-2030",
			files: ["logs/dafman-2026-05-21.log", "logs/recent.json", "settings.json", "README.md"],
			totalBytes: 12345,
		};
		expect(sample).toMatchSnapshot();
	});

	test("saveExportFile result shape", () => {
		const sample = {
			path: "C:/Users/mahle/AppData/Local/Dafman/exports/refactor-session-2026-05-22-…md",
			bytes: 4242,
		};
		expect(sample).toMatchSnapshot();
	});

	test("AuditEntry permission + url shapes", () => {
		const samples: import("../rpc").AuditEntry[] = [
			{
				ts: "2026-05-22T00:00:00.000Z",
				kind: "permission",
				sessionId: "sess-1",
				requestId: "req-1",
				permissionKind: "shell",
				decision: "approveOnce",
				summary: "shell: git status",
			},
			{
				ts: "2026-05-22T00:00:01.000Z",
				kind: "permission",
				sessionId: "sess-1",
				requestId: "req-2",
				permissionKind: "url",
				decision: "approveForSession",
				approvalDomain: "github.com",
			},
			{
				ts: "2026-05-22T00:00:02.000Z",
				kind: "url",
				url: "https://github.com/login",
				allowed: true,
				reason: "ok",
			},
		];
		expect(samples).toMatchSnapshot();
	});

	test("WorkspaceFileMatch carries kind", () => {
		const samples: import("../rpc").WorkspaceFileMatch[] = [
			{ path: "README.md", absolutePath: "/r/README.md", name: "README.md", kind: "file" },
			{ path: "src", absolutePath: "/r/src", name: "src", kind: "directory" },
			{ path: "~/Documents", absolutePath: "/home/u/Documents", name: "Documents", kind: "directory" },
		];
		expect(samples).toMatchSnapshot();
	});

	test("InstructionSource shape", () => {
		const samples: InstructionSource[] = [
			{
				name: "AGENTS.md",
				scope: "project",
				path: "C:\\repo\\dafman\\AGENTS.md",
				relativePath: "AGENTS.md",
				exists: true,
				content: "# Rules",
				sizeBytes: 7,
			},
			{
				name: "Copilot user instructions",
				scope: "global",
				path: "C:\\Users\\me\\.copilot\\instructions.md",
				relativePath: "C:\\Users\\me\\.copilot\\instructions.md",
				exists: false,
				content: null,
				sizeBytes: null,
			},
		];
		expect(samples).toMatchSnapshot();
	});

	test("pickAttachment result shape", () => {
		const cancel: { path: string; kind: "file" | "directory" } | null = null;
		const file = { path: "C:/abs/foo.txt", kind: "file" as const };
		const dir = { path: "C:/abs/repo", kind: "directory" as const };
		expect({ cancel, file, dir }).toMatchSnapshot();
	});
});
